--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,55 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Service Finder</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ServiceHub</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Service Finder</h1>
-    <button onclick="fetchServices()">Show Services</button>
-    <div id="serviceList"></div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">ServiceHub</a>
+            <div class="navbar-nav ms-auto">
+                <button class="btn btn-outline-light me-2" onclick="showLoginForm()">Login</button>
+                <button class="btn btn-primary" onclick="showSignupForm()">Sign Up</button>
+            </div>
+        </div>
+    </nav>
 
+    <div class="container mt-4">
+        <div id="auth-forms" style="display: none;">
+            <!-- Login Form -->
+            <div id="login-form">
+                <h2>Login</h2>
+                <form onsubmit="handleLogin(event)">
+                    <input type="email" placeholder="Email" id="login-email" required>
+                    <input type="password" placeholder="Password" id="login-password" required>
+                    <button type="submit">Login</button>
+                </form>
+            </div>
+
+            <!-- Signup Form -->
+            <div id="signup-form" style="display: none;">
+                <h2>Sign Up</h2>
+                <form onsubmit="handleSignup(event)">
+                    <input type="text" placeholder="Name" id="signup-name" required>
+                    <input type="email" placeholder="Email" id="signup-email" required>
+                    <input type="password" placeholder="Password" id="signup-password" required>
+                    <button type="submit">Sign Up</button>
+                </form>
+            </div>
+        </div>
+
+        <div id="services-section">
+            <h2>Available Services</h2>
+            <div class="row" id="serviceList"></div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
