Assistant checkpoint: Add landing page and demo services data
Assistant generated file changes:
- public/index.html: Add welcome section and improve services display
- database/seed.js: Add database seeding script
- public/script.js: Update frontend logic for services and auth

---

User prompt:

Ok after open the index.html file in the browser, I can see the first page , and there is a a navigation bar in the bar there have searviceHub (left) and login and sign up (on the right) and the login and signup button take me to login and signup page. It is all I can see till now. So after login we are suppose to ge to a new page with some contents. And after press the sign up it should be save in my database. So where is my database ? And create the landing page after login or sign up with some demo content releted to my project.

--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,21 @@
             </div>
         </div>
 
+        <div id="welcome-section" style="display: none;">
+            <h2>Welcome to ServiceHub!</h2>
+            <p>Discover and book services that match your needs.</p>
+        </div>
+
         <div id="services-section">
-            <h2>Available Services</h2>
+            <div class="services-header">
+                <h2>Available Services</h2>
+                <div class="category-filters">
+                    <button class="btn btn-outline-primary" onclick="filterServices('all')">All</button>
+                    <button class="btn btn-outline-primary" onclick="filterServices('cleaning')">Cleaning</button>
+                    <button class="btn btn-outline-primary" onclick="filterServices('repair')">Repair</button>
+                    <button class="btn btn-outline-primary" onclick="filterServices('maintenance')">Maintenance</button>
+                </div>
+            </div>
             <div class="row" id="serviceList"></div>
         </div>
     </div>
