--- a/public/index.html
+++ b/public/index.html
@@ -4,61 +4,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ServiceHub</title>
+    <title>ServiceHub - Your Local Service Marketplace</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">ServiceHub</a>
+            <a class="navbar-brand fw-bold" href="#">ServiceHub</a>
             <div class="navbar-nav ms-auto">
-                <button class="btn btn-outline-light me-2" onclick="showLoginForm()">Login</button>
+                <button class="btn btn-outline-primary me-2" onclick="showLoginForm()">Login</button>
                 <button class="btn btn-primary" onclick="showSignupForm()">Sign Up</button>
             </div>
         </div>
     </nav>
 
-    <div class="container mt-4">
-        <div id="auth-forms" style="display: none;">
-            <!-- Login Form -->
+    <header class="hero-section">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <h1 class="display-4 fw-bold">Get help from trusted local professionals</h1>
+                    <p class="lead mb-4">Book skilled service providers for all your home and office needs</p>
+                    <div class="search-box">
+                        <input type="text" placeholder="What service do you need?" class="form-control form-control-lg">
+                        <button class="btn btn-primary btn-lg">Search</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section class="popular-services py-5">
+        <div class="container">
+            <h2 class="section-title">Popular Services</h2>
+            <div class="row g-4">
+                <div class="col-md-3 col-6">
+                    <div class="service-category">
+                        <i class="fas fa-broom"></i>
+                        <h3>Cleaning</h3>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="service-category">
+                        <i class="fas fa-wrench"></i>
+                        <h3>Handyman</h3>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="service-category">
+                        <i class="fas fa-truck"></i>
+                        <h3>Moving</h3>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="service-category">
+                        <i class="fas fa-paint-roller"></i>
+                        <h3>Painting</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="how-it-works py-5 bg-light">
+        <div class="container">
+            <h2 class="section-title text-center mb-5">How It Works</h2>
+            <div class="row g-4">
+                <div class="col-md-4">
+                    <div class="step-card">
+                        <div class="step-number">1</div>
+                        <h3>Describe Your Task</h3>
+                        <p>Tell us what you need help with and when you need it done</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="step-card">
+                        <div class="step-number">2</div>
+                        <h3>Choose Your Pro</h3>
+                        <p>Browse profiles, reviews, and select the right professional</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="step-card">
+                        <div class="step-number">3</div>
+                        <h3>Get It Done</h3>
+                        <p>Your pro arrives and completes your task to perfection</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div id="auth-forms" class="modal-overlay" style="display: none;">
+        <div class="auth-modal">
             <div id="login-form">
                 <h2>Login</h2>
                 <form onsubmit="handleLogin(event)">
                     <input type="email" placeholder="Email" id="login-email" required>
                     <input type="password" placeholder="Password" id="login-password" required>
-                    <button type="submit">Login</button>
+                    <button type="submit" class="btn btn-primary w-100">Login</button>
                 </form>
             </div>
 
-            <!-- Signup Form -->
             <div id="signup-form" style="display: none;">
                 <h2>Sign Up</h2>
                 <form onsubmit="handleSignup(event)">
                     <input type="text" placeholder="Name" id="signup-name" required>
                     <input type="email" placeholder="Email" id="signup-email" required>
                     <input type="password" placeholder="Password" id="signup-password" required>
-                    <button type="submit">Sign Up</button>
+                    <button type="submit" class="btn btn-primary w-100">Sign Up</button>
                 </form>
             </div>
-        </div>
-
-        <div id="welcome-section" style="display: none;">
-            <h2>Welcome to ServiceHub!</h2>
-            <p>Discover and book services that match your needs.</p>
-        </div>
-
-        <div id="services-section">
-            <div class="services-header">
-                <h2>Available Services</h2>
-                <div class="category-filters">
-                    <button class="btn btn-outline-primary" onclick="filterServices('all')">All</button>
-                    <button class="btn btn-outline-primary" onclick="filterServices('cleaning')">Cleaning</button>
-                    <button class="btn btn-outline-primary" onclick="filterServices('repair')">Repair</button>
-                    <button class="btn btn-outline-primary" onclick="filterServices('maintenance')">Maintenance</button>
-                </div>
-            </div>
-            <div class="row" id="serviceList"></div>
         </div>
     </div>
 
