--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,54 @@
                         <h3>Painting</h3>
                     </div>
                 </div>
+                <div class="col-md-3 col-6">
+                    <div class="service-category">
+                        <i class="fas fa-tools"></i>
+                        <h3>Assembly</h3>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="service-category">
+                        <i class="fas fa-tv"></i>
+                        <h3>Mounting</h3>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="service-category">
+                        <i class="fas fa-leaf"></i>
+                        <h3>Outdoor Help</h3>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="service-category">
+                        <i class="fas fa-hammer"></i>
+                        <h3>Home Repairs</h3>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="service-category">
+                        <i class="fas fa-house-damage"></i>
+                        <h3>Plumbing</h3>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="service-category">
+                        <i class="fas fa-bolt"></i>
+                        <h3>Electrical</h3>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="service-category">
+                        <i class="fas fa-couch"></i>
+                        <h3>Furniture</h3>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="service-category">
+                        <i class="fas fa-star"></i>
+                        <h3>Trending</h3>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
