Assistant checkpoint: Add service category images with styling
Assistant generated file changes:
- public/index.html: Add image containers to service categories
- public/styles.css: Add styles for category images

---

User prompt:

Is it possible to add a sample image of service catagory, I think it will help users to get our servrces mor easily.

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,9 @@
             <div class="row g-4">
                 <div class="col-md-3 col-6">
                     <div class="service-category">
+                        <div class="category-image">
+                            <img src="https://images.unsplash.com/photo-1581578731548-c64695cc6952?auto=format&fit=crop&w=300&q=80" alt="Cleaning">
+                        </div>
                         <i class="fas fa-broom"></i>
                         <h3>Cleaning</h3>
                     </div>
