Assistant checkpoint: Added images to all service categories
Assistant generated file changes:
- public/index.html: Add images to all service categories

---

User prompt:

Okk I like that. Add sample images to all the services catagory.

--- a/public/index.html
+++ b/public/index.html
@@ -50,66 +50,99 @@
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="service-category">
+                        <div class="category-image">
+                            <img src="https://images.unsplash.com/photo-1504148455328-c376907d081c?auto=format&fit=crop&w=300&q=80" alt="Handyman">
+                        </div>
                         <i class="fas fa-wrench"></i>
                         <h3>Handyman</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="service-category">
+                        <div class="category-image">
+                            <img src="https://images.unsplash.com/photo-1603796846097-bee99e4a601f?auto=format&fit=crop&w=300&q=80" alt="Moving">
+                        </div>
                         <i class="fas fa-truck"></i>
                         <h3>Moving</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="service-category">
+                        <div class="category-image">
+                            <img src="https://images.unsplash.com/photo-1589939705384-5185137a7f0f?auto=format&fit=crop&w=300&q=80" alt="Painting">
+                        </div>
                         <i class="fas fa-paint-roller"></i>
                         <h3>Painting</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="service-category">
+                        <div class="category-image">
+                            <img src="https://images.unsplash.com/photo-1530124566582-a618bc2615dc?auto=format&fit=crop&w=300&q=80" alt="Assembly">
+                        </div>
                         <i class="fas fa-tools"></i>
                         <h3>Assembly</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="service-category">
+                        <div class="category-image">
+                            <img src="https://images.unsplash.com/photo-1593784991095-a205069470b6?auto=format&fit=crop&w=300&q=80" alt="Mounting">
+                        </div>
                         <i class="fas fa-tv"></i>
                         <h3>Mounting</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="service-category">
+                        <div class="category-image">
+                            <img src="https://images.unsplash.com/photo-1558904541-efa843a96f01?auto=format&fit=crop&w=300&q=80" alt="Outdoor Help">
+                        </div>
                         <i class="fas fa-leaf"></i>
                         <h3>Outdoor Help</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="service-category">
+                        <div class="category-image">
+                            <img src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?auto=format&fit=crop&w=300&q=80" alt="Home Repairs">
+                        </div>
                         <i class="fas fa-hammer"></i>
                         <h3>Home Repairs</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="service-category">
+                        <div class="category-image">
+                            <img src="https://images.unsplash.com/photo-1607472586893-edb57bdc0e39?auto=format&fit=crop&w=300&q=80" alt="Plumbing">
+                        </div>
                         <i class="fas fa-house-damage"></i>
                         <h3>Plumbing</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="service-category">
+                        <div class="category-image">
+                            <img src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?auto=format&fit=crop&w=300&q=80" alt="Electrical">
+                        </div>
                         <i class="fas fa-bolt"></i>
                         <h3>Electrical</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="service-category">
+                        <div class="category-image">
+                            <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=300&q=80" alt="Furniture">
+                        </div>
                         <i class="fas fa-couch"></i>
                         <h3>Furniture</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="service-category">
+                        <div class="category-image">
+                            <img src="https://images.unsplash.com/photo-1517292987719-0369a794ec0f?auto=format&fit=crop&w=300&q=80" alt="Trending">
+                        </div>
                         <i class="fas fa-star"></i>
                         <h3>Trending</h3>
                     </div>
