--- a/public/index.html
+++ b/public/index.html
@@ -35,10 +35,41 @@
         </div>
     </header>
 
+    <!-- Service Form Modal -->
+    <div id="serviceFormModal" class="modal-overlay" style="display: none;">
+        <div class="auth-modal service-form-modal">
+            <h2 id="selectedServiceTitle">Book Service</h2>
+            <form id="serviceBookingForm" onsubmit="handleServiceSubmit(event)">
+                <input type="text" id="fullName" placeholder="Full Name" required>
+                <input type="tel" id="phone" placeholder="Phone Number" required>
+                <input type="email" id="email" placeholder="Email" required>
+                <input type="text" id="address" placeholder="Address" required>
+                <input type="date" id="serviceDate" required>
+                <input type="time" id="serviceTime" required>
+                <textarea id="workDetails" placeholder="Details of the work" required></textarea>
+                <button type="submit" class="btn btn-primary w-100">Submit</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Confirmation Dialog -->
+    <div id="confirmationDialog" class="modal-overlay" style="display: none;">
+        <div class="auth-modal">
+            <h2>Service Booking Instructions</h2>
+            <div class="confirmation-instructions">
+                <p>• We will contact you within your desired time and date as soon as possible.</p>
+                <p>• Fee of service will be fixed by your live conversation with the service-man.</p>
+                <p>• After work has been done, fee must be given immediately.</p>
+                <p>• You can complain if service-man didn't work as contracted.</p>
+            </div>
+            <button onclick="confirmServiceOrder()" class="btn btn-primary w-100 mt-3">Confirm Order</button>
+        </div>
+    </div>
+
     <section class="popular-services py-5">
         <div class="container">
             <h2 class="section-title">Popular Services</h2>
-            <div class="row g-4">
+            <div id="mainCategories" class="row g-4">
                 <div class="col-md-3 col-6">
                     <div class="service-category">
                         <div class="category-image">
