--- a/public/index.html
+++ b/public/index.html
@@ -72,8 +72,12 @@
                     >
                         <ul class="navbar-nav">
                             <li class="nav-item">
+                                <a class="btn btn-outline-light ms-2" href="/pages/hire-professional.html"
+                                   >Hire Professional</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="btn btn-outline-light ms-2" href="/pages/become-provider.html"
-                                    >Get Started</a
+                                    >Become A Professional</a
                                 >
                             </li>
                         </ul>
@@ -580,7 +584,7 @@
                             Email: hsaimun688@mail.com
                         </a>
 
-                        <p>Phone: +1 (123) 456-7890</p>
+                        <p>Phone: +880 (123) 456-7890</p>
                         <div class="social-icons">
                             <a href="/pages/facebook.html" class="text-white me-2"
                                 ><i class="fab fa-facebook-f"></i
