--- a/public/pages/become-provider.html
+++ b/public/pages/become-provider.html
@@ -69,7 +69,7 @@
                     <!-- Will be populated by JavaScript -->
                 </select>
             </div>
-            <button type="submit" class="btn btn-primary">Register as Service Provider</button>
+            <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
     <script src="../script.js"></script>
