--- a/public/index.html
+++ b/public/index.html
@@ -72,18 +72,6 @@
                     >
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="/">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/pages/services.html">Services</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/pages/about.html">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/pages/contact.html">Contact</a>
-                            </li>
-                            <li class="nav-item">
                                 <a class="btn btn-outline-light ms-2" href="/pages/become-provider.html"
                                     >Get Started</a
                                 >
@@ -112,18 +100,12 @@
                             </button>
                         </div>
                         <p class="mt-3">
-                            <small
-                                >Popular Services:
-                                <a href="#" class="text-light fw-bold"
-                                    >Plumbing</a
-                                >,
-                                <a href="#" class="text-light fw-bold"
-                                    >Cleaning</a
-                                >,
-                                <a href="#" class="text-light fw-bold"
-                                    >Repair</a
-                                ></small
-                            >
+                            <small>
+                                Popular Services:
+                                <a href="#" class="text-light fw-bold hero-category" data-category="Plumbing">Plumbing</a>,
+                                <a href="#" class="text-light fw-bold hero-category" data-category="Cleaning">Cleaning</a>,
+                                <a href="#" class="text-light fw-bold hero-category" data-category="Repair">Repair</a>
+                            </small>
                         </p>
                     </div>
                     <div class="col-md-6 text-center">
@@ -158,7 +140,7 @@
                     <input type="text" id="fullName" required />
 
                     <label class="form-label" for="phone">Contact Number</label>
-                    <input type="tel" id="phone" required />
+                    <input type="tel" id="phone" required pattern="01[3-9][0-9]{8}"/>
 
                     <label class="form-label" for="email">Email Address</label>
                     <input type="email" id="email" required />
@@ -176,7 +158,7 @@
                     <label class="form-label" for="serviceTime"
                         >Desired Time of Work</label
                     >
-                    <input type="time" id="serviceTime" required />
+                    <input type="time" id="serviceTime" required min="${new Date().toISOString().split('T')[0]}" />
 
                     <label class="form-label" for="workDetails"
                         >Work Details</label
@@ -556,17 +538,17 @@
                             <li><a href="/pages/press.html" class="text-white">Press</a></li>
                             <li><a href="/pages/blog.html" class="text-white">Blog</a></li>
                             <li>
-                                <a href="/pages/terms.html" class="text-white"
+                                <a href="/pages/terms-privacy.html" class="text-white"
                                     >Terms & Privacy</a
                                 >
                             </li>
                             <li>
-                                <a href="/pages/consumer-notice.html" class="text-white"
+                                <a href="/pages/bd-consumer-notice.html" class="text-white"
                                     >Bangladesh Consumer Notice</a
                                 >
                             </li>
                             <li>
-                                <a href="/pages/privacy-info.html" class="text-white"
+                                <a href="/pages/do-not-sell.html" class="text-white"
                                     >Do Not Sell My Personal Information</a
                                 >
                             </li>
@@ -580,11 +562,11 @@
                             mobile app.
                         </p>
                         <div class="app-download">
-                            <a href="#" class="btn btn-outline-light mb-2">
+                            <a href="/pages/app-store.html" class="btn btn-outline-light mb-2">
                                 <i class="fab fa-apple"></i> Download on the App
                                 Store
                             </a>
-                            <a href="#" class="btn btn-outline-light">
+                            <a href="/pages/google-play.html" class="btn btn-outline-light">
                                 <i class="fab fa-google-play"></i> GET IT ON
                                 Google Play
                             </a>
@@ -592,7 +574,12 @@
                     </div>
                     <div class="col-md-3">
                         <h5>Contact Us</h5>
-                        <p>Email: support@servicehub.com</p>
+                        <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&to=hsaimun688@mail.com" 
+                            target="_blank" 
+                            class="btn btn-danger mb-2">
+                            Email: hsaimun688@mail.com
+                        </a>
+
                         <p>Phone: +1 (123) 456-7890</p>
                         <div class="social-icons">
                             <a href="/pages/facebook.html" class="text-white me-2"
