--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -89,6 +89,12 @@
                 </ul>
             </div>
         </div>
+        <!-- Go to Home Button -->
+    <div class="text-end mb-4">
+        <a href="/" class="btn btn-outline-primary">
+          <i class="fas fa-arrow-left me-1"></i> Go to Home
+        </a>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
