--- a/public/pages/services.html
+++ b/public/pages/services.html
@@ -1,20 +1,112 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services - ServiceHub</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Our Services - ServiceHub</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
-    <div class="container mt-5">
-        <h1>Our Services</h1>
-        <div id="serviceCategories" class="row g-4">
-            <!-- Will be populated by JavaScript -->
-        </div>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="/">ServiceHub</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/pages/services.html">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <script src="../script.js"></script>
+  </nav>
+
+  <!-- Main Content -->
+  <div class="container py-5 mt-5">
+    <!-- Go to Home Button -->
+    <div class="text-end mb-4">
+      <a href="/" class="btn btn-outline-primary">
+        <i class="fas fa-arrow-left me-1"></i> Go to Home
+      </a>
+    </div>
+
+    <h1 class="text-center mb-4">Our Services</h1>
+    <p class="text-center text-muted mb-5">Trusted help for your everyday tasks. Browse our most popular service categories below.</p>
+
+    <div class="row g-4">
+      <!-- Example Service Card -->
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h4 class="card-title"><i class="fas fa-broom text-primary me-2"></i> Home Cleaning</h4>
+            <p class="card-text">Professional cleaners for your home, including deep cleaning, kitchen, bathroom, and more.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h4 class="card-title"><i class="fas fa-tools text-primary me-2"></i> Handyman Services</h4>
+            <p class="card-text">From furniture assembly to small repairs, hire a skilled handyman you can trust.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h4 class="card-title"><i class="fas fa-lightbulb text-primary me-2"></i> Electrical Work</h4>
+            <p class="card-text">Certified electricians for installation, wiring, lighting, and troubleshooting.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h4 class="card-title"><i class="fas fa-water text-primary me-2"></i> Plumbing</h4>
+            <p class="card-text">Leaky faucet? Clogged drain? We’ve got plumbers ready to help anytime.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h4 class="card-title"><i class="fas fa-paint-roller text-primary me-2"></i> Painting</h4>
+            <p class="card-text">Interior and exterior painting by professionals to transform your space beautifully.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h4 class="card-title"><i class="fas fa-laptop-house text-primary me-2"></i> IT Support</h4>
+            <p class="card-text">Tech support for computers, software, internet setup, and troubleshooting.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../script.js"></script>
 </body>
 </html>
