Integrate tables on database

--- a/public/index.html
+++ b/public/index.html
@@ -70,11 +70,12 @@
                         class="collapse navbar-collapse justify-content-end"
                         id="navbarNav"
                     >
+                        <li class="nav-item">
+                            <a class="btn btn-outline-light ms-2" href="/">Hire Professional</a>
+                        </li>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="btn btn-outline-light ms-2" href="/pages/become-provider.html"
-                                    >Get Started</a
-                                >
+                                <a class="btn btn-outline-light fw-bold ms-2" href="/pages/become-provider.html">Be a Professional</a>
                             </li>
                         </ul>
                     </div>
@@ -580,7 +581,7 @@
                             Email: hsaimun688@mail.com
                         </a>
 
-                        <p>Phone: +1 (123) 456-7890</p>
+                        <p>Phone: +880 (123) 456-7890</p>
                         <div class="social-icons">
                             <a href="/pages/facebook.html" class="text-white me-2"
                                 ><i class="fab fa-facebook-f"></i
