Intregate Provider UI with bookings and profile page

--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,11 @@
                         <button class="btn btn-outline-primary me-2" onclick="showLoginForm()">
                             Login
                         </button>
-                        <button class="btn btn-primary" onclick="showSignupForm()">
+                        <button class="btn btn-primary me-2" onclick="showSignupForm()">
                             Sign Up
+                        </button>
+                        <button class="btn btn-outline-success me-2" onclick="showServiceProviderLoginForm()">
+                            ServiceMan Login
                         </button>
                         <button id="logoutButton" class="btn btn-outline-danger me-2" style="display: none" onclick="handleLogout()">
                             Logout
@@ -512,7 +515,7 @@
                                 >
                             </li>
                             <li>
-                                <a href="/pages/service-areas.html" class="text-white"
+                                <a href="/pages/services-by-city.html" class="text-white"
                                     >Services By City</a
                                 >
                             </li>
